vspace/src/main/webapp/resources/extra/Module_1___slideshow___1.css
.Group_7_Class {
	position: absolute;
	width: 942px;
	height: 72px;
	left: 169px;
	top: 297px;
	overflow: visible;
}
.Slideshow_previous_Class {
	position: absolute;
    width: 50px;
    height: 50px;
    left: 70px;
    top: -160px;
	overflow: visible;
}
.Ellipse_11 {
	filter: drop-shadow(3px 3px 20px rgba(0, 0, 0, 0.251));
	position: absolute;
	overflow: visible;
	width: 50px;
    height: 50px;
    left: 0px;
    top: 0px;
}
.Icon_ionic_ios_arrow_back {
	overflow: visible;
    position: absolute;
    width: 11.021px;
    height: 19.021px;
    left: 14.456px;
    top: 10.968px;
    transform: matrix(1,0,0,1,0,0);
}
.slideshow_next_Class {
	position: absolute;
	width: 50px;
    height: 50px;
    left: 870px;
    top: -160px;
	overflow: visible;
}
.Ellipse_12 {
	filter: drop-shadow(3px 3px 20px rgba(0, 0, 0, 0.251));
	position: absolute;
	overflow: visible;
	width: 50px;
    height: 50px;
	left: 0px;
	top: 0px;
}
.Icon_ionic_ios_arrow_forward {
	overflow: visible;
	position: absolute;
	 width: 11.021px;
    height: 19.021px;
	left: 17.456px;
	top: 10.968px;
	transform: matrix(1,0,0,1,0,0);
}
.Back_to_first_Class {
	position: absolute;
	width: 44px;
	height: 44px;
	left: 20px;
	top: 198px;
	overflow: visible;
	--web-animation: fadein 0.3s ease-out;
	--web-action-type: page;
	--web-action-target: Module_1___1.html;
	cursor: pointer;
}
.Ellipse_5 {
	filter: drop-shadow(3px 3px 20px rgba(0, 0, 0, 0.251));
	position: absolute;
	overflow: visible;
	width: 104px;
	height: 104px;
	left: 0px;
	top: 0px;
}
.Icon_material_first_page {
	overflow: visible;
	position: absolute;
	width: 18px;
	height: 17.405px;
	left: 13px;
	top: 13px;
	transform: matrix(1,0,0,1,0,0);
}
._DigInG_Class {
	position: absolute;
	left: 1206px;
	top: 693px;
	overflow: visible;
	width: 47px;
	white-space: nowrap;
	text-align: left;
	font-family: Helvetica Neue;
	font-style: normal;
	font-weight: normal;
	font-size: 12px;
	color: rgba(0,0,0,1);
}

a, a:hover, a:focus {
	color: inherit;
	text-decoration: none;
	transition: all 0.3s;
}

#dismiss {
	width: 35px;
	height: 35px;
	position: absolute;
	/* top right corner of the sidebar */
	top: 10px;
	right: 10px;
}

#wrapper_module {
	display: flex;
	width: 100%;
	align-items: stretch;
	overflow: hidden;
}

#slide_sidebar_module {
	min-width: 250px;
	max-width: 250px;
	transition: all 0.3s;
}

#slide_sidebar_module.active {
	margin-left: -250px;
}

#slide_sidebar_module .slide_sidebar-header {
	padding: 10px;
}

.slide_sidebar-header h3 a:hover {
	color: #7386D5;
	background: #fff;
}

#slide_sidebar_module ul li {
	padding-left: 35px;
}

#slide_sidebar_module ul li a:hover {
	color: #7386D5;
	background: #fff;
}

#slide_content_module {
	width: 100%;
	padding: 20px;
	min-height: 100vh;
	transition: all 0.3s;
}

